# Affilabs.core

./: .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  ACQUISITION_METHODS.md  ACTUAL_LIVE_ACQUISITION_FLOW.md  ADAPTIVE_OPTIMIZATION_TEST_GUIDE.md  ADDITIONAL_CLEANUP.md  AFFILABS_CORE_BACKEND_ARCHITECTURE.md  AFTERGLOW_CHANNEL_D_MISSING_FIX.md  AL_FLOW_BUILDER_CLEANUP.md  ANIML_SILA_IMPLEMENTATION_PLAN.md  ARCHITECTURE_REFACTORING_TEST_PLAN.md  ARCHITECTURE_VIOLATION_FIX_PLAN.md  AUTOMATIC_AFTERGLOW_CORRECTION_SYSTEM.md  AUTO_START_LIVE_MEASUREMENTS.md  AUTO_TRIGGER_SERVO_CALIBRATION_COMPLETE.md  AffiLabs_data_20251225_194902_txt.xlsx  AffiLabs_debug_log_20260209_220834.txt  AffiLabs_debug_log_20260218_024915.txt  Affilabs-Core.spec  BASELINE_DENOISING_COMPLETE.md  BASELINE_FOR_OPTIMIZATION.md  BASELINE_NOISE_OPTIMIZATION_STRATEGY.md  BASELINE_RECORDING_FEATURE_COMPLETE.md  BATCH_FILTERING_ARTIFACT_ANALYSIS.md  BATCH_LED_OPTIMIZATION_COMPLETE.md  BATCH_PROCESSING_STATUS.md  BATCH_THROUGHPUT_ANALYSIS.md  BATCH_VECTORIZED_SPECTRUM_OPTIMIZATION.md  BINARY_SEARCH_LED_CALIBRATION.md  BUILD_INSTALLER.md  CACHE_PREVENTION_GUIDE.md  CALIBRATION_6STEP_FINALIZATION_COMPLETE.md  CALIBRATION_6STEP_IMPLEMENTATION_COMPLETE.md  CALIBRATION_ACCELERATION_GUIDE.md  CALIBRATION_DIALOG_ENHANCEMENTS.md  CALIBRATION_ENTRY_EXIT_FLOWS.md  (+725 more)
.claude/: settings.local.json
AffiPump/: COMMANDS.md  FUNCTION_REFERENCE.md  README.md  affipump_controller.py  test_pressure.py  verify_scaling.py
Affilabs.core beta/: CALIBRATION_MASTER.md  CLICK_SELECTION_CHANGES.md  CURSOR_AUTO_FOLLOW_IMPLEMENTATION.md  DEMO_DATA_README.md  DEVICE_CONFIG_STATUS.md  DOCUMENTATION_INDEX.md  FEATURE_RESTORATION_COMPLETE.md  FILE_ORGANIZATION.md  FLAGGING_WORKFLOW_VISUAL_GUIDE.py  FULL_ERROR_LOG.txt  HARDWARE_TESTING_READY.md  LIVE_DATA_DIALOG_INTEGRATION.md  LIVE_DATA_PERFORMANCE_OPTIMIZATIONS.md  LL_UI_v1_0.py  PERFORMANCE_TUNING_GUIDE.md  QUICK_REFERENCE.md  README_HARDWARE_BEHAVIOR.md  START_HERE.md  SYSTEM_INTEGRATION_STATUS.md  SYSTEM_INTELLIGENCE_QUICKSTART.md  affilabs_core_ui.py  afterglow_correction.py  check_ports.py  config.py  live_data_dialog.py  main_simplified.py  preview_demo_data.py  quick_sim_test.py  sidebar.py  test_intelligence_bar.py  test_live_ui_post_calibration.py  test_mode2_integration_calibration.py  test_servo_led_calibration.py  transmission_spectrum_dialog.py  ui_adapter.py
LED-Counts relationship/: dark_signal_calibration.json  peak_tracking_parameter_analysis.json  spr_calibration_plan.json  test_2d_calibration_refinement.py  transmission_peak_stability.json
OEM_Communication/: Phase_Photonics_OEM_Firmware_Requirements.html
Old software/: .gitignore  BUILD_README.md  CHECKBOX_STYLING_UPDATE.md  DATA_EXPORT_GUIDE.md  LL_UI_v1_0_old.py  PHASE_3_STACKED_WIDGET_COMPLETE.md  PHASE_3_VISUAL_COMPARISON.md  PHASE_PHOTONICS_DLL_LOCATION.md  PHASE_PHOTONICS_INTEGRATION.md  PHASE_PHOTONICS_OEM_IMPLEMENTATION_GUIDE.md  PHASE_PHOTONICS_QUICK_START.md  PIPELINE_2_HIDING_SUMMARY.txt  PIPELINE_2_IMPLEMENTATION_SUMMARY.md  PIPELINE_2_QUICK_REFERENCE.txt  QUICK_START_MODERN_THEME.md  SERVO_CALIBRATION_TEST_README.md  UI_MODERNIZATION_PLAN.md  UI_PROTOTYPE_REVISION_HISTORY.md  UI_REV1_SAVE_SUMMARY.md  build_exe.bat  build_exe.py  build_executable.py  capture_test.py  check_phase_calibration.py  config.py  diagnose_pico_comm.py  ezControl.spec  fix_line.py  main.spec  main_simplified.py  remove_all_spectroscopy.py  run.py  run_log.txt  test.py  test_com_ports.py  test_flame_connection.py  test_layout_customization.py  test_pico_init.py  test_pyseabreeze.py  test_usb4000_driver.py  (+2 more)
_archived_Affilabs.core_beta/: CALIBRATION_LOGIC_LOCKED.md  CALIBRATION_SYSTEMS_SUMMARY.md  CHANNEL_CLICK_SELECTION.md  LIVE_DATA_PERFORMANCE_OPTIMIZATIONS.md  OPTICAL_CALIBRATION_WORKFLOW_OPTIMIZATION.md  TYPE_HINTS_IMPLEMENTATION.md  UI_ADAPTER_EXAMPLES.md  add_calib_debug.py  add_debug_prints.py  add_entry_prints.py  crash_log_new.txt  fix_led_params.py  fix_optical_calibration.py  fix_unknown_prints.py  inspector.py  main_simplified.py  sidebar.py  test_live_display.py  (+8 more)
firmware/pico_p4spr/: CHANGELOG.md  CMakeLists.txt  install_and_build.ps1
(+4080 files in other folders)
